<resources>
    <string name="app_name">Festival</string>
    <string name="internal_storage">Internal storage</string>
    <string name="m1">menu3</string>
    <string name="m2">menu2</string>
    <string name="m3">menu4</string>
    <string name="m4">menu1</string>
    <string name="o">ovrire</string>
    <string name="fer">fermer</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chek_internet">Vous n\'êtes pas connectés à Internet</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">Email</string>
    <string name="inscription">Inscription</string>
    <string name="valider">Valider</string>
    <string name="champs_obligatoir">Champ obligatoire</string>
    <string name="email_invalide">Adresse mail invalide</string>
    <string name="EmailOuMotDePasseInvalide">Email ou mot de passe invalide</string>
    <string name="nom">Nom</string>
    <string name="t_l">Tél</string>
    <string name="prenom">Prenom</string>
    <string name="confirm_mot_de_passe">Confirm Mot de passe</string>
    <string name="login">Login</string>
    <string name="parametre">Parametre</string>
    <string name="visiter_siteweb">Visiter SiteWeb</string>
    <string name="festival_bizerte">Festival Bizerte</string>
    <string name="les_artistes">Les Artistes</string>
    <string name="propos_du_festival">À propos du Festival</string>
    <string name="mapfestival">MapFestival</string>
    <string name="votre_score">Votre Score</string>
    <string name="modifer">Modifer</string>
    <string name="chercher">Chercher</string>
    <string name="service_proximit">Service Proximité</string>
    <string name="s_il_vous_pla_t_attendez">S\'il vous plaît, attendez…</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="annuler">Annuler</string>
    <string name="bien_jou">Bien Joué</string>
    <string name="camera">Camera</string>
    <string name="s_inscrire">S\'inscrire</string>
</resources>
