<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.v7.widget.ContentFrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1ca8e4"
                android:minHeight="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="#1ca8e4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:text="@string/festival_bizerte"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:layout_editor_absoluteX="0dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#232D4B">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/festival" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="128dp"
                        android:layout_marginTop="208dp"
                        android:background="#232D4B"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="172dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/card_bg"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.502"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/logo" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="23 - 20 Avr. 2019"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.494"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="8dp"
                        android:text="tunisie , bizerte "
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.49"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <Button
                        android:id="@+id/siteweb"
                        android:layout_width="130dp"
                        android:layout_height="42dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/transparent_bg_bordered_button"
                        android:text="@string/visiter_siteweb"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.486"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="42dp"
                        android:layout_marginStart="40dp"
                        android:background="@drawable/transparent_bg_bordered_button2"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Achat Ticket"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/siteweb" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:layout_marginEnd="40dp"
                        android:background="@drawable/transparent_bg_bordered_button1"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Achat Ticket"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/siteweb" />

                    <ImageView
                        android:id="@+id/fb"
                        android:layout_width="35dp"
                        android:layout_height="43dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/siteweb"
                        app:srcCompat="@drawable/ic_facebook"
                        tools:ignore="VectorDrawableCompat" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="24dp"
                        android:background="@color/white"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fb" />

                    <View
                        android:id="@+id/view5"
                        android:layout_width="0dp"
                        android:layout_height="6dp"
                        android:layout_marginTop="876dp"
                        android:background="@color/white"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/fb" />

                    <View
                        android:id="@+id/view4"
                        android:layout_width="0dp"
                        android:layout_height="6dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/white"
                        android:visibility="invisible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/news_rv" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/les_artistes"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view2" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/news_rv"
                        android:layout_width="match_parent"
                        android:layout_height="266dp"
                        android:layout_marginTop="38dp"
                        android:layout_marginBottom="50dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view2"
                        app:layout_constraintVertical_bias="0.009" />

                    <WebView
                        android:id="@+id/webview"
                        android:layout_width="0dp"
                        android:layout_height="266dp"
                        android:layout_marginTop="230dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/news_rv"
                        tools:ignore="WebViewLayout" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="511dp"
                        android:text="@string/propos_du_festival"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view4" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="19dp"
                        android:layout_marginEnd="18dp"
                        android:text="Fondé par Steve Berthelotte, comédien et président de l’événement, et par Francine Bédard, le Festival des Molières a donc pris forme autour d’une tasse de café en juillet 2007. Grâce au soutien, entre autres, des Loisirs Ste-Dorothée et de conseillers municipaux"
                        android:textColor="@color/colorAccent"
                        android:textDirection="firstStrongRtl"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView6" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/mapfestival"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/webview" />

                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginBottom="80dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />


                </android.support.constraint.ConstraintLayout>
            </android.support.v4.widget.NestedScrollView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.ContentFrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blau"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextColor="#fff"
        app:menu="@menu/menu">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ImageUser"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/userphoto"
            app:civ_border_color="#FFf"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="130dp"
            android:text="khaledhizawi@gmail.com"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>


